# sgx-sdk-rs

./: Cargo.toml  Makefile  README.md  taplo.toml  x86_64-unknown-unknown-sgx.json
.github/scripts/: install_sgx_sdk.sh
.github/workflows/: test.yml
cargo-sgx/: Cargo.toml  README.md  x86_64-unknown-unknown-sgx.json.template
cargo-sgx/src/: main.rs
crates/sgx_alloc/: Cargo.toml
crates/sgx_libc/: Cargo.toml
crates/sgx_libc/src/: lib.rs
crates/sgx_tcrypto/src/: lib.rs
crates/sgx_trts/src/: lib.rs
crates/sgx_tse/: Cargo.toml
crates/sgx_tse/src/: lib.rs
crates/sgx_tseal/: Cargo.toml
crates/sgx_types/: Cargo.toml
crates/sgx_urts/: Cargo.toml
crates/sgx_urts/src/: lib.rs
samples/hello-rust/: Makefile  README.md
samples/hello-rust/app/: Cargo.toml  build.rs
samples/hello-rust/app/src/: main.rs
samples/hello-rust/enclave/: .gitignore  Cargo.toml  Enclave.config.xml  Enclave.edl  Enclave_private.pem  build.rs  x86_64-unknown-unknown-sgx.json
samples/hello-rust/enclave/.cargo/: config.toml
samples/hello-rust/enclave/src/: lib.rs
sgx-alloc/: Cargo.toml
sgx-alloc/src/: alignalloc.rs  lib.rs
sgx-build/: Cargo.toml  README.md
sgx-build/src/: lib.rs
sgx-ert/: Cargo.toml
sgx-ert/src/: lib.rs
sgx-tcrypto/: Cargo.toml
sgx-tcrypto/src/: crypto.rs
sgx-trts/: Cargo.toml
sgx-trts/src/: emm.rs  enclave.rs  lib.rs  libc.rs  memchr.rs  oom.rs
sgx-tse/: Cargo.toml
sgx-tseal/: Cargo.toml
sgx-tseal/src/: aad.rs  internal.rs  seal.rs
sgx-types/: Cargo.toml  build.rs
sgx-types/src/: function.rs  macros.rs
sgx-urts/: Cargo.toml
sgx-urts/src/: env.rs  event.rs  fd.rs  lib.rs  signal.rs  simulate.rs
sgx_alloc/src/: lib.rs
sgx_tcrypto/: Cargo.toml
sgx_trts/: Cargo.toml
sgx_tseal/src/: lib.rs
sgx_urts/src/: signal.rs
unit-test/: Makefile
unit-test/app/: Cargo.toml  build.rs
unit-test/app/src/: main.rs
unit-test/enclave/: Cargo.toml  Enclave.edl  Enclave_private.pem  build.rs
unit-test/enclave/.cargo/: config.toml
unit-test/enclave/src/: lib.rs  test_crate.rs  test_crypto.rs  test_rts.rs  test_seal.rs  test_signal.rs  test_types.rs  utils.rs
