[package]
authors      = ["The Teaclave Authors", "The SGX-SDK-RS Authors"]
name         = "sgx-types"
version      = "1.2.0"
repository   = "https://github.com/datachainlab/sgx-sdk-rs"
license      = "Apache-2.0"
description  = "Rust SGX SDK provides the ability to write Intel SGX applications in Rust Programming Language."
edition      = "2021"

[lib]
name = "sgx_types"

[features]
default      = ["tstdc", "trts"]
extra_traits = []
simulation   = []

# Individual library features
tstdc                = []
tservice             = []
tcrypto              = []
tkey_exchange        = []
trts                 = []
mm                   = []
epid                 = []
launch               = []
platform             = []
quote_ex             = []
uae_service          = []
ukey_exchange        = []
urts                 = []
tprotected_fs        = []
capable              = []
pce_wrapper          = []
dcap_ql              = []
dcap_quoteprov       = []
default_qcnl_wrapper = []
dcap_quoteverify     = []
dcap_tvl             = []
tdx_attest           = []
ttls                 = []
utls                 = []

[build-dependencies]
sgx-build = { path = "../sgx-build" }

[dependencies]
