[package]
name    = "app"
version = "1.0.0"
authors = ["The SGX-SDK-RS Authors"]
build   = "build.rs"
edition = "2021"

[dependencies]
sgx-types = { path = "../../../sgx-types", default-features = false, features = ["uae_service", "urts"] }
sgx-urts  = { path = "../../../sgx-urts", features = ["simulate_utils"] }

[build-dependencies]
sgx-build = { path = "../../../sgx-build" }
